[fix]-[ABC-184]-Resize and alignment
- Title line clamps at more than 1 line on resize
- Description line clamps at more than 2 lines
- absolute positioning of buttons relative to top of carousel content container

--- a/src/modules/base/carousel/carousel.css
+++ b/src/modules/base/carousel/carousel.css
@@ -8,6 +8,10 @@
     height: 12rem;
 }
 
+.slds-carousel__content.avonni-carousel__content {
+    position: relative;
+}
+
 .avonni-carousel__nav-button {
     display: block;
 }
